Add DOM Manipulation and intrduction to jQuery exercises

--- a/06.DOM/list-of-tems.html
+++ b/06.DOM/list-of-tems.html
@@ -38,7 +38,7 @@
             //Get the input
             const itemNamee = document.getElementById("itemName").value;
 
-            //Create new li elemnt and add it content
+            //Create new <li> elemnt and add it content
             const elem = document.createElement("li");
             // elem.textContent = itemNamee + '<a href="#">Delete</a>';
             elem.innerHTML = itemNamee + ' <a href="#" class="deleteA">Delete</a>';
